--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 <div class="sort-link" id="other">Other<div class="count">0</div></div>
 <div class="sort-link" id="tools">Tools<div class="count">0</div></div>
 <div class="sort-link" id="resources">Resources</div>
-<div id="searchMe"><input type="text" id="search-criteria"/></div>
+<div id="searchMe"><input type="text" id="search-criteria" placeholder="Search projects" /></div>
 <div id="links">
 <div class="link"><a href="https://startribune.com" target="new_"><img class="striblogo" src="img/striblogo.png" class="gitlogo" /></a></div>
 <div class="link"><a href="http://www.startribune.com/local/datadrop/" target="new_"><img src="img/datalab-color.png" class="bloglogo" /> Data Drop</a></div>
