--- a/20160501-prince_stats/family.html
+++ b/20160501-prince_stats/family.html
@@ -33,7 +33,7 @@
        .connected:hover { color:#000; cursor:pointer; }
        iframe { width:100%; height:750px; }
 
-       td { word-wrap: break-word !important; }
+       td { word-wrap: break-word !important; overflow-wrap: break-word !important; word-break:break-word !important; word-wrap:break-word !important; hyphens:auto !important; }
  
         #filter { font-family:"Benton Sans"; font-size:.9em; margin:5px; }
         #filter input { width: 100% !important; padding: 0 10px 0 10px; font-family:"Benton Sans"; border-radius:0 !important; margin:0; width:100%; height:30px; line-height:120%; font-size: 1em; -webkit-appearance: none;
