--- a/20160404-dream/index.html
+++ b/20160404-dream/index.html
@@ -313,13 +313,15 @@ jQuery.fn.d3Up = function () {
    $('.p25').each(function() {
     var num = $(this).text();
     if (num != "No data available"){
-      if (num >= 15) { $(this).addClass("posDark"); $(this).html(num); }
-      else if (num >= 10) { $(this).addClass("posMid"); $(this).html(num); } 
-      else if (num > 0) { $(this).addClass("posLight"); $(this).html(num); }
-      else if (num <= -15) { $(this).addClass("negDark"); $(this).html(num); }
-      else if (num <= -10) { $(this).addClass("negMid"); $(this).html(num); }
-      else if (num < 0) { $(this).addClass("negLight"); $(this).html(num); }
-      else if (num == 0) { $(this).addClass("neutral"); $(this).html(num); }
+      var color_scale = d3.scale.linear().domain([-25, 0, 25]).range(['#CC4C02', '#ECF9B9', '#31A354']);
+      $(this).css('background-color', color_scale(num));
+      // if (num >= 15) { $(this).addClass("posDark"); $(this).html(num); }
+      // else if (num >= 10) { $(this).addClass("posMid"); $(this).html(num); } 
+      // else if (num > 0) { $(this).addClass("posLight"); $(this).html(num); }
+      // else if (num <= -15) { $(this).addClass("negDark"); $(this).html(num); }
+      // else if (num <= -10) { $(this).addClass("negMid"); $(this).html(num); }
+      // else if (num < 0) { $(this).addClass("negLight"); $(this).html(num); }
+      // else if (num == 0) { $(this).addClass("neutral"); $(this).html(num); }
     }
     });
    $('.p75').each(function() {
@@ -359,17 +361,23 @@ function mapColor(d, subject, dataCompare){
   for (var i=0; i < data.length; i++){
     if (d.properties.GEOID == data[i].FIPS || ("27" + String(d.properties.COUNTYFIPS)) == String(data[i].FIPS)){
       var points = data[i].aum25 - 47;
-      if (data[i].aum25 == null || data[i].aum25 == 0 || data[i].aum25 == "undefined") { return "neutral"; }
-      else if (points >= 15 ) { return "posDark"; }
-      else if (points >= 10) { return "posMid"; }
-      else if (points > 0) { return "posLight"; }
-      else if (points <= -15) { return "negDark"; }
-      else if (points <= -10) { return "negMid"; }
-      else if (points < 0) { return "negLight"; }
-      break;
+      if (data[i].aum25 == null || data[i].aum25 == 0 || data[i].aum25 == "undefined") { return "#ddd"; }
+      else { 
+        var color_scale = d3.scale.linear().domain([-25, 0, 25]).range(['#CC4C02', '#ECF9B9', '#31A354']);
+        return color_scale(points);
+      }
+      // break;
+      // else if (points >= 15 ) { return "posDark"; }
+      // else if (points >= 10) { return "posMid"; }
+      // else if (points > 0) { return "posLight"; }
+      // else if (points <= -15) { return "negDark"; }
+      // else if (points <= -10) { return "negMid"; }
+      // else if (points < 0) { return "negLight"; }
+      // break;
+      // return color_scale(d['properties']['CENSUSAREA']);
     }
   }
-    return "neutral";
+    return "#ddd";
 }
 
 function mapTips(d, subject, dataCompare){
@@ -379,7 +387,7 @@ function mapTips(d, subject, dataCompare){
        if (d.properties.hasOwnProperty('NAME')) { var name = d.properties.NAME; }
        else if (d.properties.hasOwnProperty('COUNTYNAME')) { var name = d.properties.COUNTYNAME; }
         var points = Math.round(data[i].aum25 - 47); 
-        return "<div style='font-weight:900;'>" + name + " County, " + data[i].state + "</div><div>" + Math.round(data[i].aum25) + " average upward mobility score</div><div class='" + mapColor(d, subject, dataCompare) + "'>" + d3.format("+")(points) + " from average</div>";
+        return "<div style='font-weight:900;'>" + name + " County, " + data[i].state + "</div><div>" + Math.round(data[i].aum25) + " average upward mobility score</div><div style='background-color:" + mapColor(d, subject, dataCompare) + "'>" + d3.format("+")(points) + " from average</div>";
       } else {
          return "<div style='font-weight:900;'>" + d.properties.NAME + " County, " + data[i].state + "</div><div>No data available</div>";
       }
@@ -419,7 +427,7 @@ d3.json("shapefiles/" + shape, function(error, us) {
       .on("click", clicked)
       .attr("id", function(d) { var str = d.properties.NAME + "" + d.properties.GEOID + "_" + geo; return str.replace(new RegExp(" ", "g"),"-"); })
       .attr("precinctName", function(d){ return d.properties.NAME })
-      .attr("class", function(d){
+      .style("fill", function(d){
          return mapColor(d, race, dataCompare);
         })
        .on("mousedown", function(d, i){
