baby name updates

--- a/20160404-dream/index.html
+++ b/20160404-dream/index.html
@@ -298,7 +298,7 @@ jQuery.fn.d3Up = function () {
     // clicked2();
     var findDistrict = $(this).text() + "_us";
     var findDistrictMN = $(this).text() + "_mn";
-    var findDistrictMN = $(this).text() + "_country";
+    var findDistrictMW = $(this).text() + "_country";
     $("[id='" + findDistrict.replace(new RegExp(" ", "g"),"-") + "']").d3Down();
     $("[id='" + findDistrict.replace(new RegExp(" ", "g"),"-") + "']").d3Up();
     $("[id='" + findDistrict.replace(new RegExp(" ", "g"),"-") + "']").d3Click();
