--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 <img class="starlogo" src="img/striblab_min.png" width="130px" />
 <p>
   <h1>StribLab</h1>
-  <div class="toptext">StribLab is the Star Tribune's aggregation of data-driven and visual storytelling and tools, including maps, charts, investigations and analysis from the Watchdog and Data Team and others across the newsroom.</div>
+  <div class="toptext">StribLab is the Star Tribune's aggregation of digital, data-driven and visual storytelling that includes tools, maps, charts, investigations and analysis from reporters and editors across the newsroom. Contact <a href="http://twitter.com/jeffhargarten" target="new_">@JeffHargarten</a> with any questions or feedback.</div>
 </p>
 </div>
 
